# Fractals-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-version.yml
benches/: application_bench.rs
src/: constant.rs  fractal_app.rs  fractals.rs  frame.rs  lib.rs  main.rs
src/benches/: application_bench.rs  mod.rs
src/enums/: fractal_type.rs  mod.rs  precision_mode.rs
src/fractals/: fractal_float.rs  fractal_kernels.rs  fractal_simd.rs  fractal_type.rs  mod.rs
src/structs/: color_scheme.rs  fractal_app.rs  fractal_float.rs  mod.rs  point.rs
src/traits/: fractal_float.rs  mod.rs
src/ui/: fractal_app.rs  frame.rs  frame_actions.rs  mod.rs
src/utils/: color_scheme.rs  mod.rs  point.rs  precision_mode.rs
