[package]
name = "Fractals-rs"
version = "1.0.2"
edition = "2024"
description = "A simple fractal viewer written in Rust using eframe and egui"
keywords = ["fractals", "egui", "eframe", "rust", "gui"]
license = "GPL-3.0"
categories = ["gui", "graphics"]
repository = "https://github.com/Maxime-Cllt/Fractals-rs.git"
authors = ["Maxime-Cllt"]

[lib]
name = "fractals_rs"
path = "src/lib.rs"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
rayon = "1.10.0"
image = "0.25.6"

[dev-dependencies]
criterion = "0.7.0"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "unwind"

[profile.test]
incremental = true
opt-level = 1
debug = false
overflow-checks = true
codegen-units = 1
lto = false

[profile.release]
incremental = false
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
rpath = false
debug-assertions = false


# Profile for profiling/benchmarking
[profile.bench]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "benchmark_application"
harness = false
path = "src/benches/application_bench.rs"