[package]
name = "Fractals-rs"
version = "1.0.3"
edition = "2024"
description = "A simple fractal viewer written in Rust using eframe and egui"
keywords = ["fractals", "egui", "eframe", "rust", "gui"]
license = "GPL-3.0"
categories = ["gui", "graphics"]
repository = "https://github.com/Maxime-Cllt/Fractals-rs.git"
authors = ["Maxime-Cllt"]

[lib]
name = "fractals_rs"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.33.3", default-features = false, features = ["default_fonts"] }
rayon = "1.11.0"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
rust_decimal = { version = "1.39.0", optional = true }
rust_decimal_macros = { version = "1.39.0", optional = true }
paste = "1.0"
wide = "0.7"

[dev-dependencies]
criterion = "0.8.1"

[features]
default = [] # Default feature
f128 = ["rust_decimal", "rust_decimal_macros"] # Feature to enable f128 precision

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "unwind"

[profile.test]
incremental = true
opt-level = 1
debug = false
overflow-checks = true
codegen-units = 1
lto = false

[profile.release]
incremental = false
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
rpath = false
debug-assertions = false


# Profile for profiling/benchmarking
[profile.bench]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "benchmark_application"
harness = false
path = "benches/application_bench.rs"